Почти завершена безопастность. Добавлены правки: отмена запланированного, правка фильтра дат (необходимо полностью ввести дату)